--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,14 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": { 
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http-errors": "^2.0.0", 
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "mongoose": "^7.4.1",
     "mongoose-slug-updater": "^3.3.0",
@@ -22,9 +24,9 @@
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
   },
-	"devDependencies": {
-		"@babel/core": "^7.22.9",
-		"@babel/node": "^7.22.6",
-		"@babel/preset-env": "^7.22.9"
-	}
+  "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/node": "^7.22.6",
+    "@babel/preset-env": "^7.22.9"
+  }
 }
